tests/ui/missing.stderr
error: delimiter is not contained in the input string
 --> tests/ui/missing.rs:2:50
  |
2 |     let _ = const_split_str::split!("head-tail", "?");
  |                                                  ^^^
